--- a/python-mysql-notebook.ipynb
+++ b/python-mysql-notebook.ipynb
@@ -162,7 +162,7 @@
    "source": [
     "# insert data\n",
     "sql = \"INSERT INTO cricketer_information(name, email, phone_number, address) VALUES(%s, %s, %s, %s)\"\n",
-    "students_data = [\n",
+    "palyers_data = [\n",
     "    (\"Sabbir Rahman\", 'sabbirrahman@gmail.com', '01775326440', 'Godagari, Rajshahi'),\n",
     "    (\"Mahmudul Hasan Joy\", 'mahmudulhasanjoy@gmail.com', '01775329912', 'Motlob, Chadpur'),\n",
     "    (\"Shakib al Hasan\", 'sabbirrahman@gmail.com', '01798326440', 'Magura, Khulna'),\n",
@@ -171,7 +171,7 @@
     "    (\"Mushfiqur Rahim\", 'sabbirrahman@gmail.com', '01895326440', 'Kahalu, Bogra')\n",
     "]\n",
     "\n",
-    "cursor.executemany(sql, students_data)\n",
+    "cursor.executemany(sql, palyers_data)\n",
     "mydb.commit()\n",
     "print(\"Data inserted successfully\")"
    ]
